# llama-cpp-manager

./: .gitignore  PKGBUILD  README.md  README_ES.md  llama-cpp-manager.desktop  llama-cpp-manager.py
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
