[package]
name = "llama-manager"
version = "0.1.0"
description = "Manage Qwen models with llama.cpp"
authors = ["Carlos Jareño"]
license = "MIT"
repository = "https://github.com/carlosjarenom/llama-cpp-manager"
edition = "2021"
rust-version = "1.77"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
